<resources>
    <string name="app_name">Rewind</string>
    <string name="hello_world">Hello ciao</string>
    <string name="video_name">Video Name</string>
    <string name="BottoneProva">BottoneProva</string>
    <string name="play_button">Play</string>
    <string name="video_player_fragment">Video Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="bookmark_image">bookmark-image</string>
    <string name="hint_name">Bookmark name…</string>
    <string name="hint_documentName">Document name…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Bookmark not saved because of an empty field.</string>
    <string name="add">Add</string>
    <string name="forward_button">Forward</string>
    <string name="backward_button">Backward</string>
    <string name="speed_up_button">SpeedUp</string>
    <string name="speed_down_button">SpeedDown</string>
    <string name="backwardten_button">Backward Ten</string>
    <string name="forwardten_button">Forward Ten</string>
    <string name="addbookmark_button">Add Bookmark</string>
    <string name="return_button">Return</string>
    <string name="bookmarksview_button">Bookmarks</string>
    <string name="nextbookmark_button">Next Bookmarks</string>
    <string name="previousbookmark_button">Precedent Bookmarks</string>
    <string name="recyclerview_closer_button">Recycler View Closer</string>
    <string name="bookmarks_videoplayer">Bookmark Video Players</string>
    <string name="inner_videoplayer">Video Players</string>
    <string name="opening_pdf">opening_pdf</string>
    <string name="open_from_storage">Open PDF</string>
    <string name="add_pdf_button">Add PDF</string>
    <string name="change_pdf_button">Change PDF</string>
    <string name="change_pdf_page">Change Page</string>
    <string name="back_pdf_reader_button">Back</string>
    <string name="select_pdf_page">Select PDF Page</string>
    <string name="search_bookmark_name_string">Search bookmark name...</string>
    <string name="video_connect_button">CONNECT</string>
    <string name="video_connecting_button">CONNECTING</string>
    <string name="video_connected_button">CONNECTED</string>
    <string name="undefined_time">00:00:00</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="modify_bookmark_button">Modify</string>
    <string name="finish_button">Finish</string>
    <string name="video_tutorial_1">The video player page enables classic buttons to control a remote playback. There are buttons to increase the speed (hare) or decrease it (snail). There are buttons to move back and forth, either by 10 seconds or between the video bookmarks created by the user.</string>
    <string name="video_tutorial_2">The \"Bookmarks\" button is used to see all the bookmarks linked to the video being played. The button with the bookmark symbol is used to add a bookmark to the current time of the video.</string>
    <string name="video_tutorial_3">The \"Connect\" button tries to open a connection with the computer on which the video is being played, and leads to a page to input the IP address. The \"Disconnect\" button closes the connection.</string>
    <string name="bookmark_tutorial_1">Each added bookmark must be titled. It is then possible to choose a pdf using the \"Select PDF\" button and then choose the correct page, as done in the bookmark management page.</string>
    <string name="bookmark_tutorial_2">If a pdf is selected, a thumbnail of the selected page appears. To add the bookmark, just click on the \"Save\" button.</string>
    <string name="bookmark_1">On this page you can manage all the created bookmarks. It is possible to sort by the different fields of the bookmarks.</string>
    <string name="bookmark_2">It\'s possible to select a bookmark and then choose a pdf to link by pressing the \"Select PDF\" button. The delete button deletes the bookmark.</string>
    <string name="bookmark_3">Once a PDF file is selected between the ones available on the device, it will be possible to scroll through the pages to link the selected bookmark to a specific one.</string>
    <string name="bookmark_4">\nUsing \"Select PDF\" it is possible to change the associated PDF file. To change the page of the PDF, click on the thumbnail.</string>
    <string-array name="search_spinner_array">
        <item>by Name (A-Z)</item>
        <item>by Name (Z-A)</item>
        <item>by Date (latest)</item>
        <item>by Date (oldest)</item>
        <item>by Video Name (A-Z)</item>
        <item>by Video Name (Z-A)</item>
        <item>by Document Name (A-Z)</item>
        <item>by Document Name (Z-A)</item>
    </string-array>
</resources>