<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_player_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4000BCD4"
    android:backgroundTintMode="screen">

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/forward_button"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/forward_button"
        android:src="@android:drawable/ic_media_ff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/speed_up_button"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/speed_up_button"
        android:src="@drawable/ic_hare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck" />


    <ImageButton
        android:id="@+id/speed_down_button"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/speed_down_button"
        android:src="@drawable/ic_snail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFFFF"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/backward_button"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/backward_button"
        android:src="@android:drawable/ic_media_rew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/play_button"
        android:src="@drawable/play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/return_to_intro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>