<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cocoa_background"
    app:layout_constraintWidth_percent="80"
    tools:context=".tutorial_fragment.BookmarkFragmentTutorial">


    <TextView
        android:id="@+id/sorting_text_view3"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textAlignment="center"
        android:text="Tutorial of Bookmarks Page"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bookmark_tutorial_horizontal7"
        app:layout_constraintEnd_toStartOf="@+id/guideline_bookmark_tutorial_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_bookmark_tutorial_vertical10"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bookmark_tutorial_vertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bookmark_tutorial_vertical10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bookmark_tutorial_vertical90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bookmark_tutorial_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bookmark_tutorial_horizontal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bookmark_tutorial_horizontal50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_video_player_tutorial_horizontal95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <ImageButton
        android:id="@+id/bookmark_tutorial_right_arrow"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/cocoa_background"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/orange_button_unpressed"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/bookmark_tutorial_closer_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/recyclerview_closer_button"
        android:focusable="auto"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_video_player_tutorial_horizontal95"
        app:layout_constraintEnd_toStartOf="@+id/guideline_bookmark_tutorial_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_bookmark_tutorial_vertical10"
        app:layout_constraintTop_toTopOf="@+id/guideline_bookmark_tutorial_horizontal7">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sorting_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bookmark_1"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/sorting_image_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/cocoa_background"
                app:srcCompat="@raw/sorting_by_field"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/selected_bookmark_text_view"
                android:layout_height="match_parent"
                android:text="@string/bookmark_2"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/selected_bookmark_image_view"
                android:layout_height="match_parent"
                android:background="@color/cocoa_background"
                app:srcCompat="@raw/selected_pdf"
                tools:src="@tools:sample/avatars"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/pdf_and_page_selection_text_view"
                android:layout_height="match_parent"
                android:text="@string/bookmark_3"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/pdf_and_page_selection_image_view"
                android:layout_height="match_parent"
                android:background="@color/cocoa_background"
                app:srcCompat="@raw/pdf_and_page_selection"
                tools:src="@tools:sample/avatars"
                android:layout_width="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thumbnail_selection_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bookmark_4"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/thumbnail_selection_image_view"
                android:layout_height="match_parent"
                android:background="@color/cocoa_background"
                app:srcCompat="@raw/selected_pdf_thumbnail"
                tools:src="@tools:sample/avatars"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>