<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cocoa_background"
    tools:context=".tutorial_fragment.NewBookmarkFragmentTutorial">


    <TextView
        android:id="@+id/sorting_text_view2"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:text="Tutorial of New Bookmark Page"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_new_bookmark_tutorial_horizontal7"
        app:layout_constraintEnd_toStartOf="@+id/guideline_new_bookmark_tutorial_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_new_bookmark_tutorial_vertical10"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_new_bookmark_tutorial_horizontal90"
        app:layout_constraintEnd_toStartOf="@+id/guideline_new_bookmark_tutorial_vertical90"
        app:layout_constraintStart_toStartOf="@+id/guideline_new_bookmark_tutorial_vertical10"
        app:layout_constraintTop_toTopOf="@+id/guideline_new_bookmark_tutorial_horizontal7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/buttons_video_player_tutorial_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bookmark_tutorial_1"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/buttons_video_player_tutorial_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                app:srcCompat="@raw/new_bookmark_pdf_selection"
                tools:src="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/connection_button_text_view3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/bookmark_tutorial_2"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/bookmarks_button_image_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/cocoa_background"
                    app:srcCompat="@raw/pdf_icon_thumbnail"
                    tools:src="@tools:sample/avatars" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_new_bookmark_tutorial_vertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_new_bookmark_tutorial_vertical10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_new_bookmark_tutorial_vertical90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_new_bookmark_tutorial_horizontal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_new_bookmark_tutorial_horizontal50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_new_bookmark_tutorial_horizontal90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <ImageButton
        android:id="@+id/new_bookmark_tutorial_left_arrow"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/cocoa_background"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/orange_button_unpressed"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/new_bookmark_tutorial_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>